# system-design-platform

./: .claude-state.json  .env.example  .gitignore  .pre-commit-config.yaml  .remediation-state.json  CLAUDE_RESUME.md  Dockerfile  Dockerfile.backend  README.md  TASK_RESUME_STATE.md  cloudbuild.yaml  docker-compose.yml  e2e_results.json  generate_diagram.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  seed_data.py
backend/alembic/: env.py
backend/api/: __init__.py  admin.py  assets.py  auth.py  chat.py  distributed.py  problems.py  submissions.py  tests.py  user.py
backend/auth/: __init__.py  jwt_handler.py  oauth.py
backend/middleware/: __init__.py  audit_middleware.py  rate_limiter.py
backend/models/: __init__.py  audit_log.py  problem.py  submission.py  test_result.py  user.py
backend/prompts/: __init__.py  analyze_error.py  generate_terraform.py  generate_tests.py  validate_design.py
backend/schemas/: __init__.py  error_analysis.py  problem.py  submission.py  test_result.py  user.py
backend/services/: __init__.py  ai_service.py  audit_service.py  chaos_service.py  cleanup_scheduler.py  deployment_service.py  distributed_build.py  distributed_tests.py  distributed_tests_2pc.py  distributed_tests_chandy_lamport.py  distributed_tests_consistent_hashing.py  distributed_tests_paxos.py  distributed_tests_rendezvous_hashing.py  distributed_tests_vector.py  error_analyzer.py  gcp_service.py  moderation_service.py  orchestrator.py  terraform_service.py  test_runner.py  validation_service.py  warm_pool_service.py
backend/tests/: conftest.py  test_admin_api.py  test_api_integration.py  test_assets_api.py  test_audit_api.py  test_audit_service.py  test_auth_data_management.py  test_config.py  test_distributed_api.py  test_distributed_templates.py  test_distributed_tests.py  test_distributed_tests_new.py  test_distributed_tests_vector.py  test_jwt.py  test_moderation_service.py  test_nginx_proxy.py  test_oauth.py  test_schemas.py  test_system_design_problems.py  test_user_api.py  test_validation_service.py
backend/websocket/: __init__.py  connection_manager.py  routes.py
distributed_problems/chandy_lamport/templates/rust/: Cargo.toml  build.rs
distributed_problems/chandy_lamport/templates/rust/src/: main.rs
distributed_problems/fixed_window_counter/templates/rust/: Cargo.toml  build.rs
distributed_problems/fixed_window_counter/templates/rust/src/: main.rs
distributed_problems/inverted_file_index/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/inverted_file_index/templates/rust/: Cargo.toml  build.rs
distributed_problems/inverted_file_index/templates/rust/src/: main.rs
distributed_problems/kv_store_btree/templates/rust/: Cargo.toml  build.rs
distributed_problems/kv_store_btree/templates/rust/src/: main.rs
distributed_problems/kv_store_log/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/paxos/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/product_quantization/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/raft/solutions/cpp/: CMakeLists.txt  README.md  server.cpp
distributed_problems/raft/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/raft/templates/cpp/tests/: integration_tests.cpp  unit_tests.cpp
distributed_problems/sliding_window_log/templates/cpp/: CMakeLists.txt  server.cpp
distributed_problems/sliding_window_log/templates/rust/: Cargo.toml  build.rs
distributed_problems/sliding_window_log/templates/rust/src/: main.rs
distributed_problems/token_bucket/templates/rust/: Cargo.toml  build.rs
distributed_problems/token_bucket/templates/rust/src/: main.rs
distributed_problems/two_phase_commit/templates/cpp/: CMakeLists.txt  server.cpp
docker/warm-container/: Dockerfile  requirements.txt  warm_runner.py
docs/: API.md  ARCHITECTURE.md  AUDIT_AND_SECURITY.md  CANVAS_ANALYSIS.md  CANVAS_IMPLEMENTATION_PLAN.md  CHAT_TOOL_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_OPTIMIZATION.md  DEVELOPMENT.md  DIAGRAM_TOOL_ANALYSIS.md  DISTRIBUTED_CONSENSUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATE.json  NEXT_STEPS.md  REMEDIATION_PLAN.md  REPOSITORY_ANALYSIS.md  TEST_CONVERSION_PLAN.md  WEBSOCKET.md
docs/design/: key_generation_service.md
docs/solutions/: url_shortener_kgs_solution.md
e2e/: package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  navigation.spec.ts  submission.spec.ts
frontend/: .env.production  .eslintrc.cjs  .gcloudignore  .gitignore  Dockerfile  Dockerfile.admin  Dockerfile.prod  admin.html  cloudbuild.yaml  index.html  nginx.admin.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.admin.ts  vite.config.ts
frontend/src/: AdminApp.tsx  App.tsx  admin-main.tsx  index.css
infrastructure/scripts/: deploy-demo.sh  deploy-prod.sh  setup-projects.sh  update-ip-allowlist.sh
scripts/: e2e_distributed_test.py
solutions/distributed-cache/: L5-Senior-SWE-Solution.md  L6-Staff-Engineer-Solution.md  L7-Principal-Engineer-Solution.md
solutions/notification-system/: L5-Senior-SWE-Solution.md  L6-Staff-Engineer-Solution.md  L7-Principal-Engineer-Solution.md
solutions/rate-limiter/: L5-Senior-SWE-Solution.md  L6-Staff-Engineer-Solution.md  L7-Principal-Engineer-Solution.md
solutions/search-autocomplete/: L5-Senior-SWE-Solution.md  L6-Staff-Engineer-Solution.md  L7-Principal-Engineer-Solution.md
solutions/url-shortener/: L5-Senior-SWE-Solution.md  L6-Staff-Engineer-Solution.md  L7-Principal-Engineer-Solution.md
tests/: README.md  __init__.py  conftest.py
tests/chaos/: __init__.py  actions.py  experiment_cache_failure.json  experiment_chat.json  experiment_database_failure.json  experiment_file_sharing.json  experiment_instance_failure.json  experiment_raft_leader_failure.json  experiment_raft_network_partition.json  experiment_raft_node_failure.json  experiment_url_shortener.json  experiment_url_shortener_advanced.json  experiment_zonal_outage.json  probes.py
tests/functional/: conftest.py  (+4 more)
(+332 files in other folders)
