[package]
name = "kv-store-btree-server"
version = "0.1.0"
edition = "2021"
authors = ["System Design Platform"]
description = "Distributed KV Store with B+ Tree Implementation"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "src/main.rs"
